--- a/index.html
+++ b/index.html
@@ -445,10 +445,10 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-id">
-              <img src="https://i.imgur.com/Cd4dmsF.png" class="img-fluid-portfolio" alt="">
+              <img src="https://imgur.com/zijDByM.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
                 <h4>Infographic Resume</h4>
-                <a href="https://i.imgur.com/Cd4dmsF.png" title="Infographic Resume | 2020"
+                <a href="https://imgur.com/zijDByM.png" title="Infographic Resume | 2020"
                   data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
                     title="Expand"></i>&nbsp;</a>
                 <a href="portfolio/igra-2.html" class="details-link"><i class="fa-solid fa-circle-chevron-right"
