--- a/portfolio/lta-pids.html
+++ b/portfolio/lta-pids.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Infographic Resume</title>
+  <title>Personal Website Redesigns</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -70,10 +70,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Infographic Resume</h2>
+          <h2>LTA Bus PIDS Redesign</h2>
           <ol>
-            <li><a href="">Home</a></li>
-            <li>Infographic Resume</li>
+            <li><a href="../#hero-animated">Home</a></li>
+            <li>LTA Bus PIDS Redesign</li>
           </ol>
         </div>
 
@@ -91,9 +91,12 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://imgur.com/mq6xG7W.png" alt="">
+                  <img src="https://i.imgur.com/a2vd71Q.jpg" alt="">
                 </div>
 
+                <div class="swiper-slide">
+                  <img src="https://i.imgur.com/qoTLPOy.jpg" alt="">
+                </div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -103,14 +106,20 @@
             <div class="portfolio-info">
               <h3>Project Information</h3>
               <ul>
-                <li><strong>Category</strong>: Infographic Design</li>
-                <li><strong>Project Year</strong>: 2020</li>
+                <li><strong>Category</strong>: Website Design </li>
+                <li><strong>Project Year</strong>: 2019 - May 2022</li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                A submission for an assignment to turn my Resume into an Infographic Version.
+                My website redesigns made over the last few years. First started as a School Assignment, I decided to
+                work on it and made it look more professional.
+                <br>
+                <br>
+                View the websites here: <br>
+                <a href="https://nurafianzulkifli.github.io/personal-legacy-v1/">Version 1 (Legacy)</a> <br>
+                <a href="https://nurafianzulkifli.github.io/personal-legacy-v2/">Version 2 (Legacy)</a> 
               </p>
             </div>
           </div>
