--- a/portfolio/lta-pids.html
+++ b/portfolio/lta-pids.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Personal Website Redesigns</title>
+  <title>LTA Bus PIDS Redesign</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -91,11 +91,25 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/a2vd71Q.jpg" alt="">
+                  <img src="https://imgur.com/qAAEuQi.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/qoTLPOy.jpg" alt="">
+                  <img src="https://imgur.com/z1krEpP.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="https://imgur.com/P4WnBvN.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="https://imgur.com/z1krEpP.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <video width="855" height="511" controls loop>
+                    <source src="https://imgur.com/k8Qf5C1.mp4" type="video/mp4">
+                  </video>
                 </div>
               </div>
               <div class="swiper-pagination"></div>
@@ -106,20 +120,19 @@
             <div class="portfolio-info">
               <h3>Project Information</h3>
               <ul>
-                <li><strong>Category</strong>: Website Design </li>
-                <li><strong>Project Year</strong>: 2019 - May 2022</li>
-              </ul>
+                <li><strong>Category</strong>: Concepts & Replications </li>
+                <li><strong>Project Year</strong>: 2023</li>
+            </ul>
             </div>
             <div class="portfolio-description">
               <h2>Description</h2>
               <p>
-                My website redesigns made over the last few years. First started as a School Assignment, I decided to
-                work on it and made it look more professional.
-                <br>
-                <br>
-                View the websites here: <br>
-                <a href="https://nurafianzulkifli.github.io/personal-legacy-v1/">Version 1 (Legacy)</a> <br>
-                <a href="https://nurafianzulkifli.github.io/personal-legacy-v2/">Version 2 (Legacy)</a> 
+                My take on the redesign of LTA's Bus Passenger Information Display System (PIDS).
+                <br><br>
+                <b><i class="bi-arrow-right-circle-fill"></i> Picture 1:</b><br> PIDS UI at a glance <br><br>
+                <b><i class="bi-arrow-right-circle-fill"></i> Picture 2:</b><br> PIDS UI - UI showing the Next Stop (Top) and UI showing the Stop the Bus is currently at (Bottom) <br><br>
+                <b><i class="bi-arrow-right-circle-fill"></i> Picture 3:</b><br> PIDS UI - UI showing when the Bus Stopping Bell is pressed (Top) and UI showing the aftermath of it (Bottom) <br><br>
+                <b><i class="bi-arrow-right-circle-fill"></i> Video:</b><br> PIDS UI - UI in action
               </p>
             </div>
           </div>
