--- a/index.html
+++ b/index.html
@@ -361,6 +361,19 @@
 
           <div class="row g-0 portfolio-container">
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr filter-am">
+              <img src="https://imgur.com/d2iKOEH.png" class="img-fluid-portfolio" alt="">
+              <div class="portfolio-info">
+                <h4>LTA Bus PIDS Redesign</h4>
+                <a href="https://imgur.com/d2iKOEH.png" title="LTA Bus PIDS Redesign | 2023"
+                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
+                    title="Expand"></i>&nbsp;</a>
+                <a href="portfolio/lta-pids.html" class="details-link"><i class="fa-solid fa-circle-chevron-right"
+                    title="More Details"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+          <div class="row g-0 portfolio-container">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr filter-am">
               <img src="https://imgur.com/VRb2A9W.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
                 <h4>MyTransport.SG App Redesign</h4>
