--- a/portfolio/lta-pids.html
+++ b/portfolio/lta-pids.html
@@ -107,7 +107,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <video width="855" height="511" controls loop>
+                  <video width="100%" height="511" controls loop>
                     <source src="https://imgur.com/k8Qf5C1.mp4" type="video/mp4">
                   </video>
                 </div>
