--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
           </ul><!-- End Portfolio Filters -->
 
           <div class="row g-0 portfolio-container">
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr filter-am">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
               <img src="https://imgur.com/d2iKOEH.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
                 <h4>LTA Bus PIDS Redesign</h4>
