--- a/index.html
+++ b/index.html
@@ -223,8 +223,7 @@
                 <p class="summary">
                   My name is Nurafian Zulkifli and I recently graduated from Singapore Polytechnic. Currently serving
                   the nation.<br><br>
-                  I am very passionate about Technology and Designs - mainly Website Designs, and I also have special
-                  interests in Wayfinding and Signage Designs.
+                  I am very passionate about Technology and Designs - mainly Website Designs, Wayfinding and Signage Designs.
                   I also enjoy replicating stuffs that interests me, in which my works can be seen below.
                 </p>
               </div>
