--- a/index.html
+++ b/index.html
@@ -359,6 +359,18 @@
           </ul><!-- End Portfolio Filters -->
 
           <div class="row g-0 portfolio-container">
+                        <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-wd">
+              <img src="https://imgur.com/qWiJJ43.png" class="img-fluid-portfolio" alt="">
+              <div class="portfolio-info">
+                <h4>Wayfinding Signages Website</h4>
+                <a href="https://imgur.com/qWiJJ43.png" title="Wayfinding Signages Website | 2023"
+                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
+                    title="Expand"></i>&nbsp;</a>
+                <a href="https://bit.ly/pt-wayfinding" class="details-link"><i class="fa-solid fa-circle-chevron-right"
+                    title="Visit Website"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
               <img src="https://imgur.com/d2iKOEH.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
