--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
           <div class="col-lg-5">
             <div class="about-img">
-              <img src="assets/img/about.jpg" class="img-fluid" alt="">
+              <img src="assets/img/about.png" class="img-fluid" alt="">
             </div>
           </div>
 
@@ -605,7 +605,7 @@
             &copy; 2023 <strong><span>Copyright</span></strong>. All Rights Reserved
           </div>
           <div class="credits">
-            Last Updated: January 2023</a>
+            Last Updated: April 2023</a>
           </div>
         </div>
       </div>
