2023-04 Prep for Version Next

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>My
                 Works</span></a></li>
           <li><a href="#connect" class="nav-link scrollto"><i class="bx bxs-group"></i> <span>Connect</span></a></li>
+          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>My
+                Works</span></a></li>
+          <li><a href="https://nurafianzulkifli.github.io/nrfz-dev/" class="nav-link scrollto"><i
+                class="bi bi-eye-fill"></i><span>Preview the New Look!</span></a></li>
         </ul>
         </li>
         </ul>
@@ -223,7 +227,8 @@
                 <p class="summary">
                   My name is Nurafian Zulkifli and I recently graduated from Singapore Polytechnic. Currently serving
                   the nation.<br><br>
-                  I am very passionate about Technology and Designs - mainly Website Designs, Wayfinding and Signage Designs.
+                  I am very passionate about Technology and Designs - mainly Website Designs, Wayfinding and Signage
+                  Designs.
                   I also enjoy replicating stuffs that interests me, in which my works can be seen below.
                 </p>
               </div>
@@ -274,7 +279,8 @@
 
                 <p class="timeline-year">Oct 2021 - Feb 2022 | HatchDev Asia</p>
                 <ul>
-                  <li><i class="bi-arrow-right-circle-fill"></i> <b>Front-End Developer / UX Designer - </b> Full-Time/Final-Year Project</li>
+                  <li><i class="bi-arrow-right-circle-fill"></i> <b>Front-End Developer / UX Designer - </b>
+                    Full-Time/Final-Year Project</li>
                 </ul>
 
                 <p class="timeline-year">Mar 2021 - Aug 2021 | Housing & Development Board</p>
@@ -359,7 +365,7 @@
           </ul><!-- End Portfolio Filters -->
 
           <div class="row g-0 portfolio-container">
-                        <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-wd">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-wd">
               <img src="https://imgur.com/qWiJJ43.png" class="img-fluid-portfolio" alt="">
               <div class="portfolio-info">
                 <h4>Wayfinding Signages Website</h4>
@@ -383,144 +389,144 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-          <div class="row g-0 portfolio-container">
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr filter-am">
-              <img src="https://imgur.com/VRb2A9W.png" class="img-fluid-portfolio" alt="">
-              <div class="portfolio-info">
-                <h4>MyTransport.SG App Redesign</h4>
-                <a href="https://imgur.com/VRb2A9W.png" title="MyTransport.SG App Redesign | 2022"
-                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
-                    title="Expand"></i>&nbsp;</a>
-                <a href="portfolio/mtsg.html" class="details-link"><i class="fa-solid fa-circle-chevron-right"
-                    title="More Details"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
+            <div class="row g-0 portfolio-container">
+              <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr filter-am">
+                <img src="https://imgur.com/VRb2A9W.png" class="img-fluid-portfolio" alt="">
+                <div class="portfolio-info">
+                  <h4>MyTransport.SG App Redesign</h4>
+                  <a href="https://imgur.com/VRb2A9W.png" title="MyTransport.SG App Redesign | 2022"
+                    data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
+                      title="Expand"></i>&nbsp;</a>
+                  <a href="portfolio/mtsg.html" class="details-link"><i class="fa-solid fa-circle-chevron-right"
+                      title="More Details"></i></a>
+                </div>
+              </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
-              <img src="https://i.imgur.com/l2OaGt2.png" class="img-fluid-portfolio" alt="">
-              <div class="portfolio-info">
-                <h4>Ez-Link Card Redesign V2</h4>
-                <a href="https://i.imgur.com/l2OaGt2.png" title="Ez-Link Card Redesign V2 | 2022"
-                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
-                    title="Expand"></i>&nbsp;</a>
-                <a href="portfolio/ezlink-redesign-v2.html" class="details-link"><i
-                    class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
+              <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
+                <img src="https://i.imgur.com/l2OaGt2.png" class="img-fluid-portfolio" alt="">
+                <div class="portfolio-info">
+                  <h4>Ez-Link Card Redesign V2</h4>
+                  <a href="https://i.imgur.com/l2OaGt2.png" title="Ez-Link Card Redesign V2 | 2022"
+                    data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
+                      title="Expand"></i>&nbsp;</a>
+                  <a href="portfolio/ezlink-redesign-v2.html" class="details-link"><i
+                      class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
+                </div>
+              </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
-              <img src="https://i.imgur.com/vpGCJNc.png" class="img-fluid-portfolio" alt="">
-              <div class="portfolio-info">
-                <h4>MAN A22 Lion Mascot Replication</h4>
-                <a href="https://i.imgur.com/vpGCJNc.png" title="MAN A22 Lion Mascot Replication | 2022"
-                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
-                    title="Expand"></i>&nbsp;</a>
-                <a href="portfolio/man-superlion.html" class="details-link"><i class="fa-solid fa-circle-chevron-right"
-                    title="More Details"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
+              <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
+                <img src="https://i.imgur.com/vpGCJNc.png" class="img-fluid-portfolio" alt="">
+                <div class="portfolio-info">
+                  <h4>MAN A22 Lion Mascot Replication</h4>
+                  <a href="https://i.imgur.com/vpGCJNc.png" title="MAN A22 Lion Mascot Replication | 2022"
+                    data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
+                      title="Expand"></i>&nbsp;</a>
+                  <a href="portfolio/man-superlion.html" class="details-link"><i
+                      class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
+                </div>
+              </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
-              <img src="https://i.imgur.com/nqXFd0q.png" class="img-fluid-portfolio" alt="">
-              <div class="portfolio-info">
-                <h4>MRT Signages Concept/Replications</h4>
-                <a href="https://i.imgur.com/nqXFd0q.png" title="MRT Signages Concept/Replications | 2020 - 2022"
-                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
-                    title="Expand"></i>&nbsp;</a>
-                <a href="portfolio/mrt-nselem.html" class="details-link"><i class="fa-solid fa-circle-chevron-right"
-                    title="More Details"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
+              <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
+                <img src="https://i.imgur.com/nqXFd0q.png" class="img-fluid-portfolio" alt="">
+                <div class="portfolio-info">
+                  <h4>MRT Signages Concept/Replications</h4>
+                  <a href="https://i.imgur.com/nqXFd0q.png" title="MRT Signages Concept/Replications | 2020 - 2022"
+                    data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
+                      title="Expand"></i>&nbsp;</a>
+                  <a href="portfolio/mrt-nselem.html" class="details-link"><i class="fa-solid fa-circle-chevron-right"
+                      title="More Details"></i></a>
+                </div>
+              </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
-              <img src="https://i.imgur.com/KtauzUr.png" class="img-fluid-portfolio" alt="">
-              <div class="portfolio-info">
-                <h4>Bus Replications</h4>
-                <a href="https://i.imgur.com/KtauzUr.png" title="Bus Replications | 2021 - 2022"
-                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
-                    title="Expand"></i>&nbsp;</a>
-                <a href="portfolio/bus-replications.html" class="details-link"><i
-                    class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
+              <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-cr">
+                <img src="https://i.imgur.com/KtauzUr.png" class="img-fluid-portfolio" alt="">
+                <div class="portfolio-info">
+                  <h4>Bus Replications</h4>
+                  <a href="https://i.imgur.com/KtauzUr.png" title="Bus Replications | 2021 - 2022"
+                    data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
+                      title="Expand"></i>&nbsp;</a>
+                  <a href="portfolio/bus-replications.html" class="details-link"><i
+                      class="fa-solid fa-circle-chevron-right" title="More Details"></i></a>
+                </div>
+              </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-wd">
-              <img src="https://i.imgur.com/j20EaY5.png" class="img-fluid-portfolio" alt="">
-              <div class="portfolio-info">
-                <h4>Personal Website Redesigns</h4>
-                <a href="https://i.imgur.com/j20EaY5.png" title="Personal Website Redesigns | 2019 - May 2022"
-                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
-                    title="Expand"></i>&nbsp;</a>
-                <a href="portfolio/pw-redesign.html" class="details-link"><i class="fa-solid fa-circle-chevron-right"
-                    title="More Details"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
+              <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-wd">
+                <img src="https://i.imgur.com/j20EaY5.png" class="img-fluid-portfolio" alt="">
+                <div class="portfolio-info">
+                  <h4>Personal Website Redesigns</h4>
+                  <a href="https://i.imgur.com/j20EaY5.png" title="Personal Website Redesigns | 2019 - May 2022"
+                    data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
+                      title="Expand"></i>&nbsp;</a>
+                  <a href="portfolio/pw-redesign.html" class="details-link"><i class="fa-solid fa-circle-chevron-right"
+                      title="More Details"></i></a>
+                </div>
+              </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-id">
-              <img src="https://i.imgur.com/c4cJ3qC.png" class="img-fluid-portfolio" alt="">
-              <div class="portfolio-info">
-                <h4>COVID-19 Shopping Habits</h4>
-                <a href="https://i.imgur.com/c4cJ3qC.png" title="COVID-19 Shopping Habits | 2021"
-                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
-                    title="Expand"></i>&nbsp;</a>
-                <a href="portfolio/igra-1.html" class="details-link"><i class="fa-solid fa-circle-chevron-right"
-                    title="More Details"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
+              <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-id">
+                <img src="https://i.imgur.com/c4cJ3qC.png" class="img-fluid-portfolio" alt="">
+                <div class="portfolio-info">
+                  <h4>COVID-19 Shopping Habits</h4>
+                  <a href="https://i.imgur.com/c4cJ3qC.png" title="COVID-19 Shopping Habits | 2021"
+                    data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
+                      title="Expand"></i>&nbsp;</a>
+                  <a href="portfolio/igra-1.html" class="details-link"><i class="fa-solid fa-circle-chevron-right"
+                      title="More Details"></i></a>
+                </div>
+              </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-id">
-              <img src="https://imgur.com/zijDByM.png" class="img-fluid-portfolio" alt="">
-              <div class="portfolio-info">
-                <h4>Infographic Resume</h4>
-                <a href="https://imgur.com/zijDByM.png" title="Infographic Resume | 2020"
-                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
-                    title="Expand"></i>&nbsp;</a>
-                <a href="portfolio/igra-2.html" class="details-link"><i class="fa-solid fa-circle-chevron-right"
-                    title="More Details"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
+              <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-id">
+                <img src="https://imgur.com/zijDByM.png" class="img-fluid-portfolio" alt="">
+                <div class="portfolio-info">
+                  <h4>Infographic Resume</h4>
+                  <a href="https://imgur.com/zijDByM.png" title="Infographic Resume | 2020"
+                    data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
+                      title="Expand"></i>&nbsp;</a>
+                  <a href="portfolio/igra-2.html" class="details-link"><i class="fa-solid fa-circle-chevron-right"
+                      title="More Details"></i></a>
+                </div>
+              </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-am">
-              <img src="https://i.imgur.com/5havueB.png" class="img-fluid-portfolio" alt="">
-              <div class="portfolio-info">
-                <h4>Flashify - a Flashcard App</h4>
-                <a href="https://i.imgur.com/5havueB.png" title="Flashify - a Flashcard App | 2020"
-                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
-                    title="Expand"></i>&nbsp;</a>
-                <a href="portfolio/ffs.html" class="details-link"><i class="fa-solid fa-circle-chevron-right"
-                    title="More Details"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
+              <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-am">
+                <img src="https://i.imgur.com/5havueB.png" class="img-fluid-portfolio" alt="">
+                <div class="portfolio-info">
+                  <h4>Flashify - a Flashcard App</h4>
+                  <a href="https://i.imgur.com/5havueB.png" title="Flashify - a Flashcard App | 2020"
+                    data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
+                      title="Expand"></i>&nbsp;</a>
+                  <a href="portfolio/ffs.html" class="details-link"><i class="fa-solid fa-circle-chevron-right"
+                      title="More Details"></i></a>
+                </div>
+              </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-am">
-              <img src="https://i.imgur.com/91L7YvJ.png" class="img-fluid-portfolio" alt="">
-              <div class="portfolio-info">
-                <h4>Food Review Compiler App</h4>
-                <a href="https://i.imgur.com/91L7YvJ.png" title="Food Review Compiler App | 2020"
-                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
-                    title="Expand"></i>&nbsp;</a>
-                <a href="portfolio/frc.html" class="details-link"><i class="fa-solid fa-circle-chevron-right"
-                    title="More Details"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
+              <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-am">
+                <img src="https://i.imgur.com/91L7YvJ.png" class="img-fluid-portfolio" alt="">
+                <div class="portfolio-info">
+                  <h4>Food Review Compiler App</h4>
+                  <a href="https://i.imgur.com/91L7YvJ.png" title="Food Review Compiler App | 2020"
+                    data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
+                      title="Expand"></i>&nbsp;</a>
+                  <a href="portfolio/frc.html" class="details-link"><i class="fa-solid fa-circle-chevron-right"
+                      title="More Details"></i></a>
+                </div>
+              </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-ld">
-              <img src="https://i.imgur.com/YFyTSxh.png" class="img-fluid-portfolio" alt="">
-              <div class="portfolio-info">
-                <h4>Friends Forever Logo Design</h4>
-                <a href="https://i.imgur.com/YFyTSxh.png" title="Friends Forever Logo Design | 2020"
-                  data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
-                    title="Expand"></i>&nbsp;</a>
-                <a href="portfolio/ffl.html" class="details-link"><i class="fa-solid fa-circle-chevron-right"
-                    title="More Details"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
+              <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-ld">
+                <img src="https://i.imgur.com/YFyTSxh.png" class="img-fluid-portfolio" alt="">
+                <div class="portfolio-info">
+                  <h4>Friends Forever Logo Design</h4>
+                  <a href="https://i.imgur.com/YFyTSxh.png" title="Friends Forever Logo Design | 2020"
+                    data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="fa-solid fa-expand"
+                      title="Expand"></i>&nbsp;</a>
+                  <a href="portfolio/ffl.html" class="details-link"><i class="fa-solid fa-circle-chevron-right"
+                      title="More Details"></i></a>
+                </div>
+              </div><!-- End Portfolio Item -->
 
-          </div><!-- End Portfolio Container -->
+            </div><!-- End Portfolio Container -->
+
+          </div>
 
         </div>
-
-      </div>
     </section>
 
 
