--- a/worksbynrfz/wayfind.html
+++ b/worksbynrfz/wayfind.html
@@ -59,7 +59,7 @@
                 <li><strong>Category</strong>: Website Design</li>
                 <li><strong>Project Year</strong>: 2020 - Present</li>
                 <li><strong>Project URL</strong>: <a
-                    href="https://nurafianzulkifli.github.io/signages-nrfz/">Wayfinding? Right this way.</a></li>
+                    href="https://nurafianzulkifli.github.io/signages-nrfz/" target="_blank">Wayfinding? Right this way.</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
