--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                 <p>Website Design</p>
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/UjEPpfE.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="More Replications"><i class="bi bi-zoom-in"></i></a>
+                    class="portfolio-lightbox" title="Wayfinding? Right this way. - Improving PT Signages"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/wayfind.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
