--- a/index.html
+++ b/index.html
@@ -350,6 +350,22 @@
             <div class="portfolio-wrap">
               <img src="https://i.imgur.com/UjEPpfE.png" class="img-fluid" alt="">
               <div class="portfolio-info">
+                <h4>SMRT/SBST Delays Checker</h4>
+                <p>Website Design</p>
+                <div class="portfolio-links">
+                  <a href="https://i.imgur.com/PXEUAVG.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="SMRT/SBST Delays Checker"><i class="bi bi-zoom-in"></i></a>
+                  <a href="worksbynrfz/wayfind.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-wd">
+            <div class="portfolio-wrap">
+              <img src="https://i.imgur.com/UjEPpfE.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
                 <h4>Wayfinding? Right this way. - Improving PT Signages</h4>
                 <p>Website Design</p>
                 <div class="portfolio-links">
