--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/PXEUAVG.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="SMRT/SBST Delays Checker"><i class="bi bi-zoom-in"></i></a>
-                  <a href="worksbynrfz/wayfind.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="worksbynrfz/delays-checker.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
               </div>
