--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-wd">
             <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/UjEPpfE.png" class="img-fluid" alt="">
+              <img src="https://i.imgur.com/PXEUAVG.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>SMRT/SBST Delays Checker</h4>
                 <p>Website Design</p>
