--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -66,7 +66,7 @@
                         <div class="portfolio-description">
                             <h2>SMRT/SBST Delays Checker</h2>
                             <p>
-                                A pet-project of mine. Created just to keep track of train delays and breakdowns. THe
+                                A pet-project of mine. Created just to keep track of train delays and breakdowns. The
                                 current features only included an Overview of Days Since Last Reported Failure, the
                                 Delays Overview, as well as Recent Incidents (i.e. Incidents History). I do wish to make this into a real-time website one day.
                             </p>
