--- a/index.html
+++ b/index.html
@@ -348,12 +348,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-wd">
             <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/PXEUAVG.png" class="img-fluid" alt="">
+              <img src="https://i.imgur.com/Iz25hBG.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>SMRT/SBST Delays Checker</h4>
                 <p>Website Design</p>
                 <div class="portfolio-links">
-                  <a href="https://i.imgur.com/PXEUAVG.png" data-gallery="portfolioGallery"
+                  <a href="https://i.imgur.com/Iz25hBG.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="SMRT/SBST Delays Checker"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/delays-checker.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
@@ -364,12 +364,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-wd">
             <div class="portfolio-wrap">
-              <img src="https://i.imgur.com/UjEPpfE.png" class="img-fluid" alt="">
+              <img src="https://i.imgur.com/vCrjzcZ.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Wayfinding? Right this way. - Improving PT Signages</h4>
                 <p>Website Design</p>
                 <div class="portfolio-links">
-                  <a href="https://i.imgur.com/UjEPpfE.png" data-gallery="portfolioGallery"
+                  <a href="https://i.imgur.com/vCrjzcZ.png" data-gallery="portfolioGallery"
                     class="portfolio-lightbox" title="Wayfinding? Right this way. - Improving PT Signages"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/wayfind.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
