--- a/worksbynrfz/wayfind.html
+++ b/worksbynrfz/wayfind.html
@@ -44,7 +44,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/UjEPpfE.png" alt="">
+                  <img src="https://i.imgur.com/vCrjzcZ.png" alt="">
                 </div>
 
               </div>
