--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -44,7 +44,7 @@
                             <div class="swiper-wrapper align-items-center">
 
                                 <div class="swiper-slide">
-                                    <img src="https://i.imgur.com/PXEUAVG.png" alt="">
+                                    <img src="https://i.imgur.com/Iz25hBG.png" alt="">
                                 </div>
 
                             </div>
