--- a/index.html
+++ b/index.html
@@ -346,6 +346,22 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-cr">
+            <div class="portfolio-wrap">
+              <img src="https://i.imgur.com/onb8rea.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>New Wayfinding System for BP16 Jelapang</h4>
+                <p>Concepts & Replications</p>
+                <div class="portfolio-links">
+                  <a href="https://i.imgur.com/onb8rea.png" data-gallery="portfolioGallery"
+                    class="portfolio-lightbox" title="New Wayfinding System for BP16 Jelapangr"><i class="bi bi-zoom-in"></i></a>
+                  <a href="worksbynrfz/bp16.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-wd">
             <div class="portfolio-wrap">
               <img src="https://i.imgur.com/Iz25hBG.png" class="img-fluid" alt="">
@@ -655,7 +671,7 @@
         &copy; Copyright <strong><span>2023</span></strong>. All Rights Reserved.
       </div>
       <div class="modified">
-        Last Modified: June 2023
+        Last Modified: August 2023
       </div>
     </div>
   </footer><!-- End Footer -->
