--- a/worksbynrfz/bp16.html
+++ b/worksbynrfz/bp16.html
@@ -44,7 +44,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="https://i.imgur.com/bzRVrK0.png" alt="">
+                  <img src="https://i.imgur.com/ksPu9sX.png" alt="">
                 </div>
 
               </div>
