--- a/worksbynrfz/bp16.html
+++ b/worksbynrfz/bp16.html
@@ -65,6 +65,7 @@
               <h2>New Wayfinding System for BP12 Jelapang</h2>
               <p>
                 A concept proposal I made to showcase my replication works capability.
+                <a href="https://drive.google.com/file/d/1gw_glFIaAOs9FSBloBTBgmgOObMK1GcL/view?usp=sharing">PDF Version</a>
               </p>
             </div>
           </div>
