--- a/worksbynrfz/bp16.html
+++ b/worksbynrfz/bp16.html
@@ -65,8 +65,7 @@
               <h2>New Wayfinding System for BP12 Jelapang</h2>
               <p>
                 A concept proposal I made to showcase my replication works capability. <br>
-                <a href="https://drive.google.com/file/d/1_zd_nk6V3VC3Nd2vTkMsnDZ5BRFu6Z1r/view?usp=sharing" target="_blank">PDF Version</a> <br>
-                (Due to Restrictions from Google, select 'Open link in New Tab' for Desktop Viewing.)
+                <a href="https://drive.google.com/file/d/1_zd_nk6V3VC3Nd2vTkMsnDZ5BRFu6Z1r/view?usp=sharing" target="_blank">PDF Version</a>
               </p>
             </div>
           </div>
