--- a/index.html
+++ b/index.html
@@ -287,6 +287,13 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Awards & Achievements</h3>
             <div class="resume-item">
+              <h5>2023</h5>
+              <p><em>Singapore Armed Forces (SAF) </em></p>
+              <ul>
+                <li>Base Sergeant Major Coin (Supply Base Central)</li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h5>2019</h5>
               <p><em>Institute of Technical Education (ITE) </em></p>
               <ul>
