--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
             <h3 class="resume-title">Experiences</h3>
             <div class="resume-item">
-              <h4>Supply Assistant (GE)</h4>
+              <h4>Supply Assistant (GE) - Administrative</h4>
               <h5>Nov 2022 - Present</h5>
               <p><em>Singapore Armed Forces</em></p>
             </div>
