--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Wayfinding? Right this way. - Improving PT Signages</title>
+    <title>Train Delays Checker</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -59,12 +59,12 @@
                                 <li><strong>Category</strong>: Website Design</li>
                                 <li><strong>Project Year</strong>: 2023</li>
                                 <li><strong>Project URL</strong>: <a
-                                        href="https://nurafianzulkifli.github.io/delays-checker/"
-                                        target="_blank">SMRT/SBST Delays Checker</a></li>
+                                        href="https://nurafianzulkifli.github.io/train-delays-checker/"
+                                        target="_blank">Train Delays Checker</a></li>
                             </ul>
                         </div>
                         <div class="portfolio-description">
-                            <h2>SMRT/SBST Delays Checker</h2>
+                            <h2>Train Delays Checker</h2>
                             <p>
                                 A pet-project of mine. Created just to keep track of train delays and breakdowns. The
                                 current features only included an Overview of Days Since Last Reported Failure, the
