--- a/index.html
+++ b/index.html
@@ -373,11 +373,11 @@
             <div class="portfolio-wrap">
               <img src="https://i.imgur.com/Iz25hBG.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>SMRT/SBST Delays Checker</h4>
+                <h4>Train Delays Checker</h4>
                 <p>Website Design</p>
                 <div class="portfolio-links">
                   <a href="https://i.imgur.com/Iz25hBG.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="SMRT/SBST Delays Checker"><i class="bi bi-zoom-in"></i></a>
+                    class="portfolio-lightbox" title="Train Delays Checker"><i class="bi bi-zoom-in"></i></a>
                   <a href="worksbynrfz/delays-checker.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Work Details"><i class="bi bi-info-circle-fill"></i></a>
                 </div>
